// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sources: should display implementation of sources' 1`] = `
"#### Implementation of

[SomeInterface](SomeInterface.md).[prop](SomeInterface.md#prop)

#### Defined in

sources.ts:6
"
`;

exports[`Sources: should display inherited sources' 1`] = `
"#### Inherited from

[SomeClass](../classes/SomeClass.md).[prop](../classes/SomeClass.md#prop)

#### Defined in

sources.ts:2
"
`;

exports[`Sources: should display overide sources' 1`] = `
"#### Overrides

[SomeClass](../classes/SomeClass.md).[prop](../classes/SomeClass.md#prop)

#### Defined in

sources.ts:10
"
`;
